# cpp

./: .buck-java11  .buckconfig  .buckconfig.local.macosx  .clang-format  .gitmodules  BUCK  CMakeLists.txt  LICENSE  Makefile  README.md  build_folly_arm64.sh  deps
patches/folly/: 0001-Add-support-to-build-folly-for-arm64-w-corotine-supp.patch
src/: 00_sandbox.cpp  00_sandbox.h  02_copy_and_move.cpp  03_smart_pointers.cpp  04_std_coroutines.cpp  05_folly_coroutines.cpp  05_folly_coroutines_and_futures.cpp  06_folly_coroutines.cpp  06_folly_synchronization.cpp  07_templates.cpp  09_strings.cpp  10_benchmark.cpp  11_logging.cpp  11_logging_glog.cpp  12_google_test.cpp  12_logging_folly.cpp  14_range.cpp  15_functional.cpp  1_style.cpp  2_copy_and_move.cpp  3_.cpp  3_smart_pointers.cpp  4_coroutines.cpp  4_coroutines_folly.cpp  5_coroutines.cpp  5_folly_coroutines.cpp  6_coroutines_and_futures.cpp  7_templates.cpp  8_folly_optional.cpp  main.cpp  sandbox.cpp
